--- a/Bootstarp.html
+++ b/Bootstarp.html
@@ -33,11 +33,11 @@
         </div>
         <div class="form-group">
             <label for="inputPassword">Username</label>
-            <input type="username" class="form-control" id="inputUsername" placeholder="Username">
+            <input type="text" class="form-control" id="inputUsername" placeholder="Username">
         </div>
         <div class="form-group">
             <label for="inputPassword">Confirm</label>
-            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+            <input type="text" class="form-control" id="inputPassword" placeholder="Password">
         </div>
         <div class="checkbox">
             <label><input type="checkbox"> Remember me</label>
